Add images directory, and workshop html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     </head>
     <body>
         <h1>Hello World</h1>
+
+        <h1>Establishing a Web Site Class Exercise</h1>
+
+        <a href="workshop1.html">Establishing a Web Site Workshop</a>
+
+
     </body>
 </html>
-
