--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            *{
+                padding: 20px;
+            }
+            body {
+                color: #9F4C3A;
+            }
+        </style>
         <title>Hello World</title>
+        
     </head>
     <body>
         <h1>Hello World</h1>
 
+        <a href="page2.html">Link to Page2</a>
+
         <h1>Establishing a Web Site Class Exercise</h1>
 
-        <a href="workshop1.html">Establishing a Web Site Workshop</a>
+        <a href="embeddingOriginalWork.html">Original Work: Show your embedding stuff</a>
 
 
     </body>
