--- a/page2.html
+++ b/page2.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            *{
+                padding: 20px;
+            }
+            body {
+                color: #9F4C3A;
+            }
+        </style>
         <title>Hello World Page 2</title>
     </head>
     <body>
-        <h1>This is Page 2</h1>
+        <h1>This is Page 2 for optional work</h1>
 
     </body>
 </html>
