Add tags.html page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 
         <a href="embeddingOriginalWork.html">Original Work: Show your embedding stuff</a>
 
-
+        <a href="tags.html">Link to tags page</a>
     </body>
 </html>
