Finalize tags.html, and add scratch work for original work

--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
         <a href="page2.html">Link to Page2</a>
 
-        <h1>Establishing a Web Site Class Exercise</h1>
 
+        <h1>Builder 1: Establishing a Web Site Class Exercise</h1>
         <a href="embeddingOriginalWork.html">Original Work: Show your embedding stuff</a>
 
-        <a href="tags.html">Link to tags page</a>
+        <h1>Builder 2: HTML Tags</h1>
+        <a href="tags.html">Class Exercise: Link to tags page</a>
+
+        <a href="someCss.html">Original work: Link to someCss.html Page</a>
+        <a href="anExternal.css">Original work: Link to anExternal.css file</a>
+
     </body>
 </html>
