--- a/tags.html
+++ b/tags.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Kevin's Awesome Website</title>
+        <style>
+            * {
+                margin: 20px;
+            }
+        </style>
     </head>
     <body>
         <h1>Kevin Ryoo</h1>
@@ -10,31 +15,41 @@
         <p>I immigrated to United States when I was 17 years old</p>
 
         <h2>My Favorite Sites</h2>
-        <ul>
+        <ol>
             <li>
-                <a href="http://winhost6.ischool.uw.edu/gclass">gClass</a>
+                <a href="https://en.wikipedia.org/wiki/University_of_Washington">
+                    <img src="images/UW.jpg" title="UW image" style="width: 200px; height: 200px; margin: 10px">
+                </a>
             </li>
             <li>
-                <a href="https://www.youtube.com/">Youtube</a>
+                <a href="https://www.youtube.com/">
+                    <img src="images/youtube_logo.png" title="Youtube image" style="width: 20%; height: 20%;">
+                </a>
             </li>
             <li>
-                <a href="https://www.facebook.com/">Facebook</a>
+                <a href="https://www.facebook.com/">
+                    <img src="images/facebook_logo.png" title="Facebook image" style="width: 20%; height: 20%;">
+                </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/">Instagram</a>
+                <a href="https://www.instagram.com/">
+                    <img src="images/instagram_logo.webp" title="Instagram image" style="width: 20%; height: 20%;">
+                </a>
             </li>
             <li>
-                <a href="https://www.passmark.com/">Passmark</a>
+                <a href="https://www.apple.com/">
+                    <img src="images/apple_logo.png" title="Apple image" style="width: 20%; height: 20%;">
+                </a>
             </li>
-        </ul>
+        </ol>
         
         <h2>My Favorite Pictures</h2>
         <a href="https://unsplash.com/backgrounds/desktop/4k">
-            <img src="4kBackgrounds.PNG" title="download 4k backgrounds" style="">
+            <img src="images/nature.jpg" title="download 4k nature backgrounds" style="width: 640px; height: 360px">
         </a>
         <a href="https://www.hdcarwallpapers.com/">
             <img src="https://www.hdcarwallpapers.com/thumbs/2020/2021_aston_martin_vantage_roadster-t2.jpg"
-               title="download 4k car backgrounds" style="">
+               title="download 4k car backgrounds" style="width: 640px; height: 360px">
         </a>
     </body>
 </html>
