Original work final

--- a/someCss.html
+++ b/someCss.html
@@ -8,28 +8,71 @@
     </head>
 
     <body>
-        <p class="serif">
-            This is first paragraph of second original work assignment.
-            I have built my own website before so this assignment was pretty easy.
-        </p>
-        <p class="monospace">
-            This is second paragraph of second original work assignment.
-            I personally really like css stuff. So I enjoyed the time doing this assignment.
-        </p>
+        <h1>Level 1: Newbie</h1>
+        <div>
+            <p class="sans-serif">
+                This is first paragraph of second original work assignment.
+                I have built my own website before so this assignment was pretty easy.
+            </p>
+            <p class="monospace">
+                This is second paragraph of second original work assignment.
+                I personally really like css stuff. So I enjoyed the time doing this assignment.
+            </p>
 
-        <p class="sansserif">
-            The image is ugly because we were told to make it 50px by 50px
-            Try to hover the mouse to the small image!
-        </p>
+            <p class="serif">
+                The image is ugly because we were told to make it 50px by 50px
+                Try to hover the mouse to the small image!
+            </p>
+        </div>
         <br>
         <br>
         <br>
         <div style="text-align: center;">
-            <img src="images/youtube_logo.png" title="Youtube image" style="width: 50px; height: 50px">
+            <img class=newb src="images/youtube_logo.png" title="Youtube image" style="width: 50px; height: 50px">
         </div>
         <div style="text-align: center;">
-            <img src="images/nature.jpg" title="download 4k nature backgrounds" style="width: 50px; height: 50px">
+            <img class=newb src="images/nature.jpg" title="download 4k nature backgrounds" style="width: 50px; height: 50px">
         </div>
 
+        <h1>Level 2: Apprentice</h1>
+        <p style="padding-left: 20px">Text is centered on a photo</p>
+        <p style="padding-left: 20px">Text has border with dotted lines</p>
+        <div>
+            <div class="level2container">
+                <img src="images/sea.jpg" title="sea background" style="width: 30%; height: 30%; margin: 20px;">
+                <div class="level2center">World is beautiful</div>
+            </div>
+            <div class="level2container">
+                <img src="images/night.jpg" title="night scene background" style="width: 30%; height: 30%; margin: 20px;">
+                <div class="level2center">World is beautiful</div>
+            </div>
+        </div>
+        <p style="padding-left: 20px">Photo has 20 pixel margins right, left, top, bottom</p>
+        <p style="padding-left: 20px">Added gray background so that you can easily see the margin</p>
+        <div>
+            <div class="level2container">
+                <img src="images/sea.jpg" title="sea background" style="width: 30%; height: 30%; margin: 20px;">
+                <img src="images/sea.jpg" title="sea background" style="width: 30%; height: 30%; margin: 20px;">
+                <img src="images/sea.jpg" title="sea background" style="width: 30%; height: 30%; margin: 20px;">
+            </div>
+        </div>
+
+        <h1>Level 3: Master</h1>
+        <p style="padding-left: 20px">Current page has an external style sheet added</p>
+        <p style="padding-left: 20px">Image has rounded border</p>
+        <p style="padding-left: 20px">Image has float properties</p>
+        <div>
+            <div class="level3container">
+                <p><img class="level3img" src="images/sea.jpg" title="sea background" style="width: 30%; height: 30%; margin: 20px; float: right;">
+                    ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> ----------> 
+                </p>
+            </div>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <div class="level3container">
+                <p><img class="level3img" src="images/night.jpg" title="night background" style="width: 30%; height: 30%; margin: 20px; float: left;">
+                    <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <---------- <----------
+                </p>
+            </div>
+        </div>
     </body>
 </html>
